--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "vite build"
 	},
 	"dependencies": {
+		"@xstate/inspect": "^0.1.1",
 		"lit-html": "^1.3.0",
 		"xstate": "^4.13.0"
 	},
